[package]
name = "neocurl"
description = "A command line tool to test servers"
license = "MIT"
homepage = "https://github.com/LeviLovie/neocurl"
repository = "https://github.com/LeviLovie/neocurl"
documentation = "https://docs.rs/neocurl"
keywords = ["request", "rest", "api", "test"]
categories = ["command-line-utilities", "development-tools"]
default-run = "ncurl"
version = "1.2.5"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3.31"
linefeed = "0.6.0"
mlua = { version = "0.10.3", features = ["lua54", "vendored", "send"] }
once_cell = "1.21.3"
owo-colors = "4.2.1"
reqwest = { version = "0.12.15", features = ["blocking"] }
tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[[bin]]
name = "ncurl"
path = "src/ncurl.rs"

[[bin]]
name = "neocurl"
path = "src/neocurl.rs"
